# file_transfer_tool

./: .gitignore  0拷贝.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_ASYNC.md  README_EN.md  build.sh  project.txt  架构设计文档.md
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  client.cpp
src/client/core/: client_core.cpp  client_core.h
src/client/handlers/: authentication_handler.cpp  authentication_handler.h  download_handler.cpp  download_handler.h  upload_handler.cpp  upload_handler.h
src/client/utils/: progress_tracker.cpp  progress_tracker.h
src/common/: CMakeLists.txt
src/common/network/: CMakeLists.txt
src/common/network/async/: event_loop.cpp  event_loop.h
src/common/network/connection/: connection_pool.cpp  connection_pool.h
src/common/network/socket/: socket_error.cpp  socket_error.h  tcp_socket.cpp  tcp_socket.h
src/common/protocol/: CMakeLists.txt  protocol.cpp  protocol.h
src/common/protocol/core/: protocol_header.cpp  protocol_header.h
src/common/protocol/messages/: authentication_message.cpp  authentication_message.h  download_message.cpp  download_message.h  key_exchange_message.cpp  key_exchange_message.h  upload_message.cpp  upload_message.h
src/common/utils/: CMakeLists.txt
src/common/utils/auth/: user_manager.cpp  user_manager.h
src/common/utils/config/: config_manager.cpp  config_manager.h
src/common/utils/crypto/: encryption.cpp  encryption.h
src/common/utils/logging/: logger.cpp  logger.h
src/common/utils/threading/: thread_pool.cpp  thread_pool.h
src/server/: CMakeLists.txt  async_server_main.cpp  server.cpp
src/server/core/: async_server_core.cpp  async_server_core.h  client_session.cpp  client_session.h  server_config.cpp  server_config.h  server_core.cpp  server_core.h
src/server/handlers/: authentication_handler.cpp  authentication_handler.h  connection_handler.cpp  connection_handler.h  download_handler.cpp  download_handler.h  download_handler_zero_copy.cpp  file_handler.cpp  file_handler.h  file_lock_manager.cpp  file_lock_manager.h  file_version.cpp  file_version.h  key_exchange_handler.cpp  key_exchange_handler.h  protocol_handler.cpp  protocol_handler.h  upload_handler.cpp  upload_handler.h  upload_handler_zero_copy.cpp
src/server/session/: session_manager.cpp  session_manager.h
src/tools/: user_admin.cpp
tests/: CMakeLists.txt
tests/integration/: encryption_e2e_test.cpp
tests/unit/: crypto_test.cpp
tools/: performance_test.cpp
